add localization for validateUniquenessOf exceptions

--- a/Frameworks/Core/ERExtensions/Resources/English.lproj/ValidationTemplate.strings
+++ b/Frameworks/Core/ERExtensions/Resources/English.lproj/ValidationTemplate.strings
@@ -13,4 +13,5 @@
 	"ValueConversionException" = "The value entered for <b>@@displayNameForProperty@@</b> is not a valid <b>@@attribute.valueClass@@</b>.";
 	"UniquenessViolationNewObject" = "<b>@@displayNameForEntity@@</b> with this <b>@@displayNameForProperty@@</b> already exists.";
 	"UniquenessViolationExistingObject" = "<b>@@displayNameForEntity@@</b> with this <b>@@displayNameForProperty@@</b> already exists.";
+	"UniquenessViolationDatabaseInconsistent" = "<b>@@displayNameForEntity@@</b> with this <b>@@displayNameForProperty@@</b> already exists.";
 }
