Fix validation templates for invalid value exceptions.

--- a/Frameworks/Core/ERExtensions/Resources/German.lproj/ValidationTemplate.strings
+++ b/Frameworks/Core/ERExtensions/Resources/German.lproj/ValidationTemplate.strings
@@ -2,6 +2,7 @@
 	"EOObjectNotAvailableException" = "Das Objekt ist in der Datenbank nicht vorhanden. Es wurde evtl. von einem anderen Benutzer gelöscht.";
 	"ExceedsMaximumLengthException" = "Der Wert für <b>@@displayNameForProperty@@</b> darf maximal <b>@@attribute.width@@</b> Zeichen haben.";
 	"InvalidNumberException" = "Bitte \U00fcberpr\U00fcfen Sie <b>@@displayNameForProperty@@</b>. @@escapedValue@@ ist kein g\U00fcltiger Wert.";
+	"InvalidValueException" = "Der Wert '@@escapedValue@@' ist für das Attribut <b>'@@displayNameForProperty@@'</b> ung\U00fcltig.";
 	"MandatoryToManyRelationshipException" = "<b>@@object.entityName@@</b> muss eine Relationship haben, was nicht der Fall ist.";
 	"MandatoryToOneRelationshipException" = "<b>@@displayNameForEntity@@</b> erfordert die Angabe von <b>@@displayNameForProperty@@</b>.";
 	"NullPropertyException" = "Bitte machen Sie eine Angabe f\U00fcr <b>@@displayNameForProperty@@</b>.";
