Add strict date validation, activated via the enableStrictDateValidation D2W key. NSTimestampFormatter will parse 31.02.2017 as 03.03.2017, while the strict date validation will recognise the value as an invalid date and throw a validation exception. (AL-11)

--- a/Frameworks/Core/ERExtensions/Resources/English.lproj/ValidationTemplate.strings
+++ b/Frameworks/Core/ERExtensions/Resources/English.lproj/ValidationTemplate.strings
@@ -3,6 +3,7 @@
 	"ExceedsMaximumLengthException" = "The value entered for <b>@@displayNameForProperty@@</b> exceeds the length of <b>@@attribute.width@@</b>.";
 	"InvalidNumberException" = "The value entered for <b>@@displayNameForProperty@@</b> is an invalid number.";
 	"InvalidValueException" = "The value entered for <b>@@displayNameForProperty@@</b> is not valid.";
+	"InvalidDateException" = "The value @@escapedValue@@ entered for <b>@@displayNameForProperty@@</b> is not a valid date.";
 	"MandatoryToManyRelationshipException" = "A <b>@@displayNameForEntity@@</b> must have a least one <b>@@displayNameForProperty@@</b>.";
 	"MandatoryToOneRelationshipException" = "A <b>@@displayNameForEntity@@</b> must have a <b>@@displayNameForProperty@@</b>.";
 	"NullPropertyException" = "Please provide a <b>@@displayNameForProperty@@</b>.";
