--- a/Frameworks/Core/ERExtensions/Resources/French.lproj/ValidationTemplate.strings
+++ b/Frameworks/Core/ERExtensions/Resources/French.lproj/ValidationTemplate.strings
@@ -3,6 +3,7 @@
 	"ExceedsMaximumLengthException" = "La valeur entr&eacute;e pour <b>@@displayNameForProperty@@</b> exc&egrave;de la longueur permise de <b>@@attribute.width@@</b>.";
 	"InvalidNumberException" = "Cette valeur n'est pas num&eacute;rique.";
 	"InvalidValueException" = "La valeur entr&eacute;e pour <b>@@displayNameForProperty@@</b> n'est pas valide.";
+	"InvalidDateException" = "La valeur @@escapedValue@@ entr&eacute;e pour <b>@@displayNameForProperty@@</b> n'est pas une date valide.";
 	"MandatoryToManyRelationshipException" = "Un <b>@@displayNameForEntity@@</b> doit poss&eacute;der au-moins une <b>@@displayNameForProperty@@</b>.";
 	"MandatoryToOneRelationshipException" = "Un <b>@@displayNameForEntity@@</b> doit poss&eacute;der un <b>@@displayNameForProperty@@</b>.";
 	"NullPropertyException" = "La valeur <b>@@displayNameForProperty@@</b> est requise.";
