--- a/Frameworks/Core/ERDirectToWeb/Resources/German.lproj/Localizable.strings
+++ b/Frameworks/Core/ERDirectToWeb/Resources/German.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 	"contains" = "enth\U00e4lt";
 	"CouldNotSave" = "Ihre \U00c4nderungen konnten nicht gesichert werden: @@message@@";
 	"CouldNotSavePleaseReapply" = "Ihre \U00c4nderungen konnten nicht gesichert werden. Der/die @@displayNameForEntity@@ wurde von einem anderen Benutzer ver\U00e4ndert und Ihre \U00c4nderungen wurden verworfen. Bitte versuchen Sie es erneut.";
-	"ends with" = "ends with";
+	"ends with" = "endet mit";
 	"ERD2W.addButtonLabel" = "Anlegen";
 	"ERD2W.advancedFindButtonLabel" = "Mehr...";
 	"ERD2W.cancelButtonLabel" = "Abbrechen";
