--- a/Frameworks/Core/ERDirectToWeb/Resources/German.lproj/ValidationTemplate.strings
+++ b/Frameworks/Core/ERDirectToWeb/Resources/German.lproj/ValidationTemplate.strings
@@ -7,8 +7,8 @@
 	"NotANumberException" = "Der Wert <b>@@escapedValue@@</b> ist keine Zahl.";
 	"NullPropertyException" = "Bitte f\U00fcllen Sie das Feld <b>@@displayNameForProperty@@</b> aus.";
 	"ObjectCannotBeDeletedException" = "Diese <b>@@displayNameForEntity@@</b> kann nicht gel\U00f6scht werden, weil Sie keine Rechte haben, diese <b>@@displayNameForEntity@@</b> direkt oder eines der verkn\U00fcpften Objekte dieser <b>@@displayNameForEntity@@</b> zu l\U00f6schen.";
-	"ObjectRemovalException" = "<b>@@displayNameForEntity@@</b> kann nicht gel\U00f6scht werden l\U00f6schen, solange noch <b>@@displayNameForProperty@@</b> gesetzt sind.";
-	"ObjectsRemovalException" = "<b>@@displayNameForEntity@@</b> kann nicht gel\U00f6scht werden l\U00f6schen, solange noch <b>@@displayNameForProperty@@</b> gesetzt sind.";
+	"ObjectRemovalException" = "<b>@@displayNameForEntity@@</b> kann nicht gel\U00f6scht werden, solange noch <b>@@displayNameForProperty@@</b> gesetzt sind.";
+	"ObjectsRemovalException" = "<b>@@displayNameForEntity@@</b> kann nicht gel\U00f6scht werden, solange noch <b>@@displayNameForProperty@@</b> gesetzt sind.";
 	"PasswordsDontMatchException" = "Die <b>Passworte</b> stimmen nicht \U00fcberein.";
 	"PasswordsFillBothFieldsException" = "Bitte f\U00fcllen Sie beide <b>Passwort</b> Felder aus.";
 }
